devscripts (2.8.6) UNRELEASED; urgency=low

  * Julian Gilbey
    - debian/control: add Suggests: libwww-perl (closes: #277388)
    - debchange: switch from ldap to wget for searching BTS (for
      efficiency)
    - tagpending: switch from ldap to wget for searching BTS (for
      efficiency)

 -- Julian Gilbey <jdg@debian.org>  Sun, 28 Nov 2004 00:13:33 +0000

devscripts (2.8.5) unstable; urgency=medium

  * Julian Gilbey
    - bts: fix "bts bugs :" error
    - bts: accept "bts tags nnnnnn +tag" syntax
    - bts: rejuvenate the close command (closes: #245956)
    - bts: fix typo (closes: #268608)
    - debchange: fixed pipe error (closes: #228749)
    - debchange: requires perl >= 5.8, so make this a Depends: in the
      control file (will be standard in sarge anyway, so it's not a
      particularly big deal) (closes: #241138)
    - debuild: correctly count the saved envvars (closes: #268985)
    - debsign: correctly handle DEBSIGN_SIGNLIKE config option (closes:
      #270262)
    - tagpending: make ldap optional (closes: #269124)
    - tagpending: fix -n output message (closes: #269125)
    - tagpending: give progress output; introduce silent option
    - uscan: support version numbers with ~ (change Devscripts::Versort to
      simply call dpkg --compare-versions to do the work) (closes: #232286)
    - wnpp-alert: now correctly reports on orphaned packages as well
      (tweaked some sed scripts; don't know what was actually wrong :-/ )
      (closes: #268948)
  * Joshua Kwan
    - debrsign: Warn if you passed a changes file but omitted the remote
      address.
    - Update debchange and tagpending for new bts2ldap gateway.
    - Remove ${perl:Depends} from control file, dh_perl is not guessing that
      we do actually need 5.8, and so we end up with a perl (>= 5.8), perl
      dependency, which is wrong.

 -- Joshua Kwan <joshk@triplehelix.org>  Sun, 26 Sep 2004 13:41:37 -0700

devscripts (2.8.4) unstable; urgency=medium
