@@ -6,7 +6,9 @@ devscripts (2.8.6) UNRELEASED; urgency=low
       efficiency)
     - tagpending: switch from ldap to wget for searching BTS (for
       efficiency)
-
+    - uupdate: apply patch from Matthew Palmer to fix overwriting upstream
+      files (closes: #230090)
+  
  -- Julian Gilbey <jdg@debian.org>  Sun, 28 Nov 2004 00:13:33 +0000
 
 devscripts (2.8.5) unstable; urgency=medium
